<resources>
    <string name="app_name">QBee Home</string>
    <string name="title_alert">Pairing time out</string>
    <string name="add_device_failed">Add device failed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="two_click_exit">Click twice then exit</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="exit">Exit</string>
    <string-array name="qos_options">
        <item name="qos_0">0</item>
        <item name="qos_1">1</item>
        <item name="qos_2">2</item>
    </string-array>
    <string name="action_add_connection">Add Connection</string>
    <string name="add_connection_general_label">General</string>
    <string name="add_connection_client_id_label">Client ID</string>
    <string name="add_connection_client_id_default">AndroidClient</string>
    <string name="add_connection_server_label">Server</string>
    <string name="add_connection_server_default">iot.eclipse.org</string>
    <string name="add_connection_port_label">Port</string>
    <string name="add_connection_clean_session_label">Clean Session</string>
    <string name="add_connection_advanced_label">Advanced</string>
    <string name="add_connection_username_label">Username</string>
    <string name="add_connection_password_label">Password</string>
    <string name="add_connection_timeout_label">Timeout</string>
    <string name="add_connection_keepalive_label">Keepalive</string>
    <string name="add_connection_tls_server_key_label">Server TLS Key</string>
    <string name="add_connection_tls_client_key_label">Client TLS Key</string>
    <string name="add_connection_lwt_label">Last Will &amp; Testament</string>
    <string name="add_connection_lwt_topic_label">Topic</string>
    <string name="add_connection_lwt_message_label">Message</string>
    <string name="add_connection_lwt_retain_label">Retain</string>
    <string name="add_connection_lwt_qos_label">QoS</string>
    <string name="hello_world">Hello world!</string>
    <string name="connection_connected_to">Connected to</string>
    <string name="connection_disconnected_from">Disconnected from</string>
    <string name="connection_unknown_status">Unknown connection status to</string>
    <string name="connection_connecting_to">Connecting to</string>
    <string name="connection_disconnecting_from">Disconnecting from</string>
    <string name="connection_error_connecting_to">An error occurred connecting to</string>
    <string name="connection_clear">Clear</string>
    <string name="subscription_new">New Subscription</string>
    <string name="isSecondary">Not Support</string>
    <string name="manage_title">Manage Connection</string>
    <string name="manage_delete">Delete Connection</string>
    <string name="manage_edit">Edit Connection</string>
    <string name="notifyTitle">MQTT Message Received</string>
    <string name="notifyTitle_connectionLost">MQTT Client Has Lost Connection</string>
    <string name="messageRecieved">Received message %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name="notification">%1$s has received %2$s on topic %3$s</string>
    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="connection_lost">%1$s has lost connection to %2$s</string>
    <string name="topic_label">Topic</string>
    <string name="qos_label">QoS</string>
    <string name="notify_label">Show Notifications</string>
    <string name="subscribe_ok">OK</string>
    <string name="subscribe_cancel">Cancel</string>
    <string name="qos_text">QoS: %1$d</string>
    <string name="notify_text">Notifications: %1$s</string>
    <string name="help_and_feedback">Help &amp; Feedback</string>
    <string name="help_paho">Paho</string>
    <string name="help_title">Eclipse Paho Android Example Utility</string>
    <string name="help_email_button">Get Help or send Feedback</string>
    <string name="help_paho_website">Go to the Paho Website</string>
    <string name="help_enable_logging">Enable Paho Logging</string>
    <string name="home_no_connections">No Connections</string>
    <string name="home_no_cons_message">It looks like there are no connections defined yet.</string>
    <string name="message_time">Time:</string>
    <string name="message_time_fmt">Time: %1$s</string>
    <string name="publish">Publish</string>
    <string name="topic_fmt">Topic: %1$s</string>
    <string name="prompt_try_again">Current operation not completed yet, try again later.</string>
    <string name="node_not_exists_network">There is no always on node exists in network.</string>
    <string name="message_always_on_exception">The Network Health Check process is over, but there is an exception to the always on device, such as "no power". \n Please check  the devcie is started normally.</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="placeholder_main_label">Main Label</string>
    <string name="placeholder_sub_label">Sub Label</string>
    <string name="placeholder_example">Example application</string>
    <string name="message_topic">Topic: </string>
    <string name="notifi_title">\"QBee Home\" Would Like to Send  You Notifications</string>
    <string name="notifi_content">Notifications may include alerts,sounds and icon badges.These can be configured in Settings.</string>
    <string name="firefly">QBee</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log in</string>
    <string name="log_in_wait_toast">Please wait a moment while landing</string>
    <string name="sign_up">Sign up</string>
    <string name="invalid_eamil_password">Invalid email or password</string>
    <string name="sign_up_one_title">Your log in credential</string>
    <string name="sign_up_explain">\ \ Please enter your email address and define a password with at least 8 digits.</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="password_strength">Password strength:</string>
    <string name="password_explain">\ \ Captial letters,numbers and special characters make your password stronger</string>
    <string name="nick_name_explain">Enter the name that is shown to other QBee users and when sharing files.</string>
    <string name="sign_up_second_title">Your filefly nickname</string>
    <string name="nickname_hint">nickname</string>
    <string name="sign_up_third_title">Account verification</string>
    <string name="verification_explain">A verification code has been sent to</string>
    <string name="verification_explain_one">\ \ Don\'t get a verification code ? Please check your Spam Folder or request a new code.</string>
    <string name="request_new_password">Request new code</string>
    <string name="verification_hint">Enter verification code</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in_one_title">Forgot password</string>
    <string name="forgot_password_explain">Please enter your email address and tap on the send button.Your password recovery code will be sent to the specified address.</string>
    <string name="log_in_second_title">Enter recovery code</string>
    <string name="recovery_code_explain">A recovery code has been sent to</string>
    <string name="recovery_code_hint">Enter recovery code</string>
    <string name="recovery_explain_one">\ \ Don\'t get a recovery code ? Please check your Spam Folder or request a new code.</string>
    <string name="log_in_third_title">Define new password</string>
    <string name="new_password_explain">\  Please enter your new password with at least 8 digits.</string>
    <string name="new_password_hint">Enter new password</string>
    <string name="verification_sent">A new code has sent \n to the specified email.</string>
    <string name="verification_invaild">Invaild verification code</string>
    <string name="dont_allow">Don\'t allow</string>
    <string name="password_start">start typing</string>
    <string name="password_strong">strong</string>
    <string name="password_weak">weak</string>
    <string name="invalid_email">Invalid email</string>
    <string name="setup_title">Your setup</string>
    <string name="setup_explain">How do you intent to use your QBee Home</string>
    <string name="cable_connected">Cable-connected to existing router</string>
    <string name="wifi_connected">WiFi-connected to existing router</string>
    <string name="lte_connected">QBee is my new router(4G/LTE)</string>
    <string name="qbox_explain">Here is what you need to start setting up your QBee Home.</string>
    <string name="qbox">QBee</string>
    <string name="power_cable">Power Cable</string>
    <string name="ethernet_cable">Ethernet Cable</string>
    <string name="sim_card">SIM card</string>
    <string name="insert_sim_card">Insert SIM card</string>
    <string name="wifi_setup_one_title">What you\'ll need</string>
    <string name="wifi_setup_second_title">Connect your QBee</string>
    <string name="wifi_setup_third_title">WiFi setup</string>
    <string name="proceed_follows">Proceed as follows</string>
    <string name="connect_power">Connect QBee with mains power</string>
    <string name="connect_router">Connect router with QBee</string>
    <string name="switch_on">Switch the QBee on</string>
    <string name="connect_means_explain">How do you intent to connect your QBee?</string>
    <string name="wps_connected">Automatically using WPS</string>
    <string name="wifi_list">Manually by selecting my Wifi from a list</string>
    <string name="wps_explain">On both your QBee and your router</string>
    <string name="delete_device_title">You\'re about to delete </string>
    <string name="delete_explain">\ \ The device will be permanently \n removed from your QBee Home. </string>
    <string name="delete_smart_start">Delete Smart Start</string>
    <string name="proceed">Proceed</string>
    <string name="done">Done</string>
    <string name="scanning_for_devices">Scanning for devices.This may take a moment.</string>
    <string name="device_not_found">Device not found?</string>
    <string name="list_instead">Select from list instead.</string>
    <string name="add_device">Add Device</string>
    <string name="select_from_list1">Select from list</string>
    <string name="scan_again">Scan again</string>
    <string name="remove_device">Remove Device</string>
    <string name="reset_device">reset</string>
    <string name="in_operation">In operation...</string>
    <string name="safety_tips">The device may control these classess</string>
    <string name="safety_tips_s0">S0</string>
    <string name="safety_tips_s2_0">S2 Unauthenticated</string>
    <string name="safety_tips_s2_1">S2 Authenticated</string>
    <string name="safety_tips_s2_2">S2 Access Control</string>
    <string name="csa_text">Device requested for client-side authentication (CSA)</string>
    <string name="yes_or_no">YES/NO</string>
    <string name="app_version">Application Version: \n %s</string>
    <string name="services_version">Services Version: \n %s</string>
    <string name="library_type">Z-Wave Library Type: %s</string>
    <string name="protocol_version">Z-Wave Protocol Version: %s</string>
    <string name="firmware_version">Firmware 0 Version: %s</string>
    <string name="hardware_version">Hardware Version: %s</string>
    <string name="firmware1_version">Firmware 1 Version: %s</string>
    <string name="firmware2_version">Firmware 2 Version: %s</string>
</resources>