<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/device_width"
    android:layout_height="@dimen/device_heigh"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/device_bulb_icon_top_20dp"
            android:text="@string/app_version"
            android:layout_marginTop="@dimen/device_bulb_icon_top_20dp"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/services_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/device_bulb_icon_top_20dp"
            android:text="@string/services_version"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/library_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/device_bulb_icon_top_20dp"
            android:text="@string/library_type"
            android:layout_marginTop="@dimen/device_bulb_icon_top_20dp"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/protocol_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/device_bulb_icon_top_20dp"
            android:text="@string/protocol_version"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/firmware_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/device_bulb_icon_top_20dp"
            android:text="@string/firmware_version"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/hardware_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/device_bulb_icon_top_20dp"
            android:text="@string/hardware_version"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/firmware_1_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/device_bulb_icon_top_20dp"
            android:text="@string/firmware1_version"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/firmware_2_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/device_bulb_icon_top_20dp"
            android:text="@string/firmware2_version"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <Button
        android:id="@+id/version_exit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/exit"
        android:textAllCaps="false" />
</RelativeLayout>
