<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_add"
            android:checked="true"
            android:icon="@drawable/ic_add"
            android:title="@string/add_device" />

    </group>

    <group
        android:id="@+id/group_account"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_remouve"
            android:checked="false"
            android:icon="@drawable/ic_acount"
            android:title="@string/remove_device" />
    </group>

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_reset"
            android:checked="false"
            android:icon="@drawable/ic_acount"
            android:title="@string/reset_device" />
    </group>

</menu>