<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/device_width"
    android:layout_height="@dimen/device_heigh"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.askey.mobile.zwave.control.home.activity.addDevice.AddDeviceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_device"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:visibility="visible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/device_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notify_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scanning_for_devices"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/scan_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/button_style"
            android:text="@string/scan_again"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/device_not_found"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/list_instead"
            android:textSize="16sp" />

        <Button
            android:id="@+id/select_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/select_from_list1"
            android:textColor="@android:color/background_light"
            android:background="@drawable/button_style"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
