<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login_third"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            >

            <!--<ImageView-->
                <!--android:id="@+id/iv_left"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/vector_drawable_ic_77"-->
                <!--android:layout_centerVertical="true"-->
                <!--/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/log_in_third_title"
                android:textSize="@dimen/sign_up_title_text"
                style="@style/textview_red"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif"

                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password_explain"
            android:layout_marginTop="20dp"
            android:gravity="center"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/et_email_adress"
                style="@style/edit_text_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_hint"
                android:background="@null"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_marginRight="70dp"
                android:layout_centerInParent="true"
                />
            <ImageView
                android:id="@+id/iv_enter_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_drawable_ic_76"
                android:visibility="invisible"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_explain"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            style="@style/graybutton"
            android:layout_marginTop="50dp"
            android:text="@string/log_in"
            />
    </LinearLayout>
</LinearLayout>
