<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/device_width"
    android:layout_height="@dimen/device_heigh"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".home.activity.ResetActivity">

    <TextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/device_bulb_icon_top_20dp"
        android:text="@string/reset_device"
        android:textColor="@color/text_color"
        android:textSize="@dimen/activity_cable_title_top_40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/in_operation"
        android:textColor="@color/text_color"
        android:textSize="@dimen/activity_account_title_25sp" />

    <TextView
        android:id="@+id/reset_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/activity_account_title_25sp"
        android:textColor="@color/red"
        android:layout_marginTop="@dimen/device_set_icon_top_10dp" />

    <Button
        android:id="@+id/reset_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/done"
        android:background="@color/red"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>